# fin-assist

./: .coderabbit.yaml  .envrc  .gitignore  AGENTS.md  README.md  devenv.nix  devenv.yaml  handoff.md  justfile  pyproject.toml  secretspec.toml  treefmt.toml
.github/workflows/: ci.yml
docs/: architecture.md  concept-inventory.md  configuration.md  decisions.md  manual-testing.md  platform-stance.md  skills-api.md  skills.md  tracing.md
docs/diagrams/: request-flow.mmd  system-architecture.mmd
scripts/: clean.py  render_diagrams.py
src/fin_assist/: __init__.py  __main__.py  paths.py  protobuf.py  providers.py  tracing_shared.py
src/fin_assist/agents/: __init__.py  agent.py  backend.py  base.py  default.py  llm_base.py  mcp.py  metadata.py  pydantic_ai_tracing.py  registry.py  results.py  serialization.py  shell.py  skills.py  spec.py  step.py  tools.py
src/fin_assist/cli/: __init__.py  client.py  display.py  main.py  server.py  tracing.py
src/fin_assist/config/: __init__.py  loader.py  schema.py
src/fin_assist/context/: __init__.py  base.py  environment.py  files.py  git.py  history.py
src/fin_assist/credentials/: __init__.py  store.py
src/fin_assist/hub/: __init__.py  _task_tracer.py  app.py  context_store.py  discovery.py  executor.py  factory.py  file_exporter.py  logging.py  pidfile.py  storage.py  tracing.py  tracing_attrs.py  worker.py
src/fin_assist/llm/: __init__.py  agent.py  model_registry.py  prompts.py  (+1 more)
tests/: __init__.py  conftest.py  test_config.py  test_package.py  test_paths.py
tests/integration/: conftest.py  test_client_hub.py
tests/test_agents/: test_agent.py  test_approval_policy_evaluate.py  test_backend.py  test_backend_tracing.py  test_base.py  test_credentials_check.py  test_default.py  test_llm_base.py  test_mcp.py  test_pydantic_ai_tracing.py  test_registry.py  test_serialization.py  test_shell.py  test_skills.py  test_spec.py  test_step.py  test_tools.py
tests/test_cli/: test_cli_tracing.py  test_client.py  test_context_injection.py  test_display.py  test_main.py  test_server.py
tests/test_context/: test_base.py  test_environment.py  test_files.py  test_git.py  test_history.py
tests/test_credentials/: test_store.py
tests/test_hub/: test_app.py  test_context_store.py  test_discovery.py  test_executor.py  test_executor_phase3.py  test_factory.py  test_file_exporter.py  test_graceful_otlp_exporter.py  test_logging.py  test_pidfile.py  test_serve.py  test_storage.py  test_tracing.py  test_tracing_attrs.py  test_tracing_setup.py  test_worker.py
tests/test_llm/: test_agent.py  test_model_registry.py  test_prompts.py  test_providers.py
tests/test_ui/: conftest.py  test_components.py  test_connect.py
(+20 files in other folders)
